# astron-claw

./: .gitignore  Dockerfile  README.md  install.sh  test_e2e_streaming.py  test_integration.py  uninstall.sh
docs/: api.md  fix-no-reply-silent-token.md  otlp-integration-design.md  redis-streams-design.md  remove-ws-chat.md  sse-design.md
frontend/: admin.html  index.html
plugin/: REFACTOR.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
plugin/src/: channel.ts  config.ts  constants.ts  hooks.ts  onboarding.ts  runtime.ts  types.ts
plugin/src/bridge/: client.ts  media.ts  monitor.ts
plugin/src/messaging/: handlers.ts  inbound.ts  outbound.ts  target.ts
scripts/: release.sh
server/: .env.example  app.py  bridge.py  config.py  media_manager.py  pyproject.toml  pytest.ini  requirements.txt  run.py  token_manager.py
server/infra/: cache.py  config.py  database.py  log.py  models.py  telemetry.py
server/migrations/: env.py
server/routers/: admin.py  admin_auth.py  health.py  media.py  sse.py  tokens.py  websocket.py
server/services/: admin_auth.py  bridge.py  media_manager.py  state.py  token_manager.py
server/tests/: conftest.py  test_admin_auth.py  test_bridge.py  test_bridge_translate.py  test_config.py  test_media_manager.py  test_sse.py  test_token_manager.py
server/tests/e2e/: README.md  test_integration.py  test_streaming.py
